--- a/index.html
+++ b/index.html
@@ -1,353 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="main.css"> -->
+    <link rel="stylesheet" href="main.css">
     <style>
-      * {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-} 
 
-html {
-  font-size: 62.5%;
-}
-
-.outer {
-  margin: 0 10px;
-  -webkit-box-shadow: 0 0 1.8rem 0.2rem #120f22b7;
-          box-shadow: 0 0 1.8rem 0.2rem #120f22b7;
-  /* background-color: aquamarine; */
-  min-height: 2000px;
-}
-
-nav{
-  /* background-color: #120f2200; */
-  background-color: #120f22;
-  font-size: 1.8rem;
-  margin: 0 10px;
-}
-/* nav::after{
-  content: '';
-  display: table;
-  clear: both;
-} */
-.navbar ul li a {
-  position: relative;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.navbar ul li a:hover {
-  -webkit-transform: scale(0.91);
-          transform: scale(0.91);
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.navbar ul li a::after {
-  content: "";
-  width: 0;
-  height: 0.3rem;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #621ffd;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.navbar ul li .act::before {
-  content: "";
-  width: 100%;
-  height: 0.05rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.navbar ul li .act::after {
-  content: "";
-  width: 100%;
-  height: 0.05rem;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.navbar ul li a:hover::after {
-  width: 100%;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.navbar .socialIcon {
-  margin-left: 5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: all 0.7s ease;
-  transition: all 0.7s ease;
-}
-
-.navbar .socialIcon i:hover {
-  -webkit-box-shadow: 0 0 1rem 0.2rem #dfe1eb inset;
-          box-shadow: 0 0 1rem 0.2rem #dfe1eb inset;
-  -webkit-transition: all 0.7s ease;
-  transition: all 0.7s ease;
-  border: none;
-}
-
-.navbar .socialIcon .fa {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  margin: 0.3rem;
-  color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.navbar .socialIcon .fa-facebook:hover {
-  color: #161aeb;
-}
-
-.navbar .socialIcon .fa-instagram:hover {
-  color: #ed127c;
-}
-
-.navbar .socialIcon .fa-youtube-play:hover {
-  color: red;
-}
-
-.navbar .socialIcon .fa-twitter:hover {
-  color: #a9d0e5;
-}
-
-/* navbar finished  *//*  slider start */
-.slider {
-  margin-top: 10.7rem;
-}
-
-.slider h5 {
-  font-size: 4rem;
-}
-
-.slider p {
-  font-size: 1.8rem;
-}
-
-/*  slider finished */
-/* admission start */
-.admission, .admission h1 {
-  background-color: #09207e;
-  height: 6rem;
-  letter-spacing: .3rem;
-  font-size: 2.8rem;
-}
-
-/* admission finished */
-/* about start */
-.about {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background-image: url("img/02-CAPTAIN-AMERICA.png"), url("img/ABOUT-US-BG.jpg");
-  background-position: bottom left,top left;
-  background-repeat: no-repeat;
-  background-size: 40% 40rem,cover;
-  min-height: 400px;
-}
-.about h1{
-  position: relative;
-}
-.about h1::after{
-  content: '';
-  background-color: white;
-  height: .2rem;
-  width: 40rem;
-  position: absolute;
-  bottom: 2rem;
-  right: 3rem;
-}
-
-.about p {
-  font-size: 1.8rem;
-  width: 60%;
-  text-align: justify;
-  margin-right: 3rem;
-  float: right;
-  clear: both;
-}
-
-.about p button {
-  margin-top: 1rem;
-  padding: 1rem 2rem;
-  font-size: 20px;
-}
-
-@media (max-width: 575px) {
-  html {
-    font-size: 55%;
-  }
-  .slider {
-    margin-top: 10.8rem;
-  }
-}
-
-/* about finished */
     </style>
     <title>BlueOrbit</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- ===============================START MENU======================================= -->
+
     <div class="outer">
-      <header>
-        <nav class="navbar navbar-expand-md  navbar-dark fixed-top">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo" style="width:20rem;">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <header>
+            <nav class="navbar navbar-expand-md  navbar-dark fixed-top">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo" style="width:20rem;">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse " id="collapsibleNavbar">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link act" href="#">HOME</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="about.html">ABOUT US</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">COURSES</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">WORK PROFILE</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">CONTACT US</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">OUR EXPERIENCE</a>
-                </li>
-                <li class="nav-item">
-                  <div class="socialIcon">
-                    <i class="fa fa-facebook"></i>
-                    <i class="fa fa-instagram"></i>
-                    <i class="fa fa-twitter"></i>
-                    <i class="fa fa-youtube-play"></i>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
+                    <div class="collapse navbar-collapse " id="collapsibleNavbar">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link act" href="#">HOME</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="about.html">ABOUT US</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">COURSES</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">WORK PROFILE</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">CONTACT US</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">OUR EXPERIENCE</a>
+                            </li>
+                            <li class="nav-item">
+                                <div class="socialIcon">
+                                    <i class="fa fa-facebook"></i>
+                                    <i class="fa fa-instagram"></i>
+                                    <i class="fa fa-twitter"></i>
+                                    <i class="fa fa-youtube-play"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
-      <!--  navigation finished -->
-      <!--  slider start -->
-      <!-- The slideshow/carousel -->
-      <div class="slider">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Blue Orbit</h5>
-                <p>First slider sub-heading.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
+        <!--  navigation finished -->
+        <!--  slider start -->
+        <!-- The slideshow/carousel -->
+        <div class="slider">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Blue Orbit</h5>
+                            <p>First slider sub-heading.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
+            </div>
         </div>
-      </div>
 
-      <!-- slider finished -->
-      <!-- admission section start-->
-      <div class="admission text-white">
-        <h1 class="fw-bold text-uppercase py-3 text-center">Admission open 2022-23</h1>
-      </div>
-      <!-- admission section finished -->
-      <!-- about start -->
-      <div class="about">
-        <div class="about-text">
-          <h1 class="text-uppercase text-light text-end p-5">About OUr company</h1 >
-            <p class="text-light">We already are a professional production house, RZ Taem Production, working in
-              advertisement and commercials since 2016 and have earned a great presence in market in last
-              decade. In order to have a greater and better workforce, we have decided to come forth in
-              professional education under our sister concern "Blue Orbit Animation". <br>
-              <button class="btn btn-outline-light">READ MORE</button>
-
-            </p>
+        <!-- slider finished -->
+        <!-- admission section start-->
+        <div class="admission text-white">
+            <h1 class="fw-bold text-uppercase py-3 text-center">Admission open 2022-23</h1>
         </div>
-      </div>
+        <!-- admission section finished -->
+        <!-- about start -->
+        <div class="about">
+            <div class="about-text">
+                <h1 class="text-uppercase text-light text-end p-5">About OUr company</h1>
+                <p class="text-light">We already are a professional production house, RZ Taem Production, working in advertisement and commercials since 2016 and have earned a great presence in market in last decade. In order to have a greater and better workforce, we have
+                    decided to come forth in professional education under our sister concern "Blue Orbit Animation". <br>
+                    <button class="btn btn-outline-light">READ MORE</button>
 
-      <!-- about finihed -->
+                </p>
+            </div>
+        </div>
+
+        <!-- about finihed -->
     </div>
     <!--  =========================================END COURSE======================== -->
     <script src="bootstrap.min.js"></script>
-  </body>
+</body>
 
 </html>
