--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.min.css">
     <style>
+        
 
     </style>
     <title>BlueOrbit</title>
@@ -24,9 +25,10 @@
                     <a class="navbar-brand" href="#">
                         <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo" style="width:20rem;">
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse " id="collapsibleNavbar">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
@@ -67,9 +69,12 @@
         <div class="slider">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
 
 
@@ -96,14 +101,16 @@
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
 
@@ -117,17 +124,134 @@
         <div class="about">
             <div class="about-text">
                 <h1 class="text-uppercase text-light text-end p-5">About OUr company</h1>
-                <p class="text-light">We already are a professional production house, RZ Taem Production, working in advertisement and commercials since 2016 and have earned a great presence in market in last decade. In order to have a greater and better workforce, we have
-                    decided to come forth in professional education under our sister concern "Blue Orbit Animation". <br>
-                    <button class="btn btn-outline-light">READ MORE</button>
+                <p class="text-light">We already are a professional production house, RZ Taem Production, working in
+                    advertisement and commercials since 2016 and have earned a great presence in market in last decade.
+                    In order to have a greater and better workforce, we have
+                    decided to come forth in professional education under our sister concern "Blue Orbit Animation".
+                    <br>
+                    <button class="btn btn-outline-light">READ MORE ...</button>
+                   
 
                 </p>
             </div>
         </div>
 
         <!-- about finihed -->
+        <!-- courses start -->
+        <div class="hcourse">
+            <h1 class="text-center">COURSES</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/3D-ANIMATION.png" alt="courses icon">
+                        </div>
+                        <p>VFX & Animation</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/FILM-MAKING-&-DIRECTION.png" alt="courses icon">
+                        </div>
+                        <p>Ad & Film Making</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/DIGITAL-MARKETING.png" alt="courses icon">
+                        </div>
+                        <p>Digital Marketing</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/UI-UX.png" alt="courses icon">
+                        </div>
+                        <p>UI & UX Web Design</p>
+                    </div>
+                </div>
+                <div class="container d-flex justify-content-end ">
+                    <button class="btn btn-outline-light">READ MORE ...</button>
+                </div>
+            </div>
+        </div>
+        <!-- courses finished -->
+        <!-- portfolio start -->
+        <div class="hportfolio">
+            <h1 class="text-center">PORTFOLIO</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/PORTFOLIO.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/PORTFOLIO.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/PORTFOLIO.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/PORTFOLIO.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                </div>
+                <div class="container d-flex justify-content-end ">
+                    <button class="btn btn-outline-light">READ MORE ...</button>
+                </div>
+            </div>
+        </div>
+        <!-- portfolio finished -->
+        <!-- gallery start -->
+        <div class="hgallery">
+            <h1 class="text-center">GALLERY</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/GALLERY.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/GALLERY.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/GALLERY.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="col-sm-12 hello_don_!">
+                            <img src="img/GALLERY.png" alt="courses icon">
+                        </div>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                </div>
+                <div class="container d-flex justify-content-end ">
+                    <button class="btn btn-outline-light">READ MORE ...</button>
+                </div>
+            </div>
+        </div>
+        <!-- gallery finished -->
+        <!-- footer start -->
+        <div class="footer">
+        <p class="text-center text-white-50 fs-3 p-3"> &reg;   all right reserved. &copy;copyright 2012-22 designed by Blue Orbit Animation. $developed by Er. Sunita & Er. Akash</p>
+        </div>
+        <!-- footer finished -->
+
     </div>
-    <!--  =========================================END COURSE======================== -->
     <script src="bootstrap.min.js"></script>
 </body>
 
