--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
                     <div class="carousel-item active">
                         <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <!-- <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p> -->
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Blue Orbit</h5>
-                            <p>First slider sub-heading.</p>
+                            <!-- <h5>Blue Orbit</h5>
+                            <p>First slider sub-heading.</p> -->
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <!-- <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p> -->
                         </div>
                     </div>
                 </div>
